fable/test/valid/subroutine_write_iunit.f
      subroutine sub(iunit)
      write(iunit, '(a)') 'ABc'
      end

      program prog
      call sub(6)
      end
