fable/test/syntax_error/bad_format_3.f
      program prog
      write(6, '('')')
      end
